--- a/index.html
+++ b/index.html
@@ -95,8 +95,24 @@
     </div>
 </section>
 
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section once="footers" class="cid-sg3hzpPwEN" id="footer6-17">
 
-  <section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    © Copyright 2020 - Alan</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
