--- a/page4.html
+++ b/page4.html
@@ -36,8 +36,24 @@
     </figure>
 </section>
 
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section once="footers" class="cid-sg3hzpPwEN" id="footer6-17">
 
-  <section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+                    © Copyright 2020 - Alan</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
